fixed hero on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1536,8 +1536,6 @@ body.no-scroll {
         max-width: 100%;
         align-items: center;
         text-align: center;
-        margin-top: auto;
-        margin-bottom: 20px;
         flex-direction: column;
         justify-content: center;
         padding: 24px 56px 40px;
